# SimulatorSWTOR

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt  log.csv
Simulator/: CMakeLists.txt
Simulator/Classes/: CMakeLists.txt  ClassBase.cpp  ClassBase.h  DirtyFIghting.cpp  DirtyFighting.h  Gunslinger.cpp  Gunslinger.h  Infiltration.cpp  Infiltration.h  Sentinel.cpp  Sentinel.h  Shadow.cpp  Shadow.h  Sharpshooter.cpp  Sharpshooter.h  factory.cpp  factory.h
Simulator/Classes/detail/: Consular.h  Gunslinger.h  Knight.h  shared.cpp  shared.h
Simulator/Classes/test/: dirty_fighting.cpp  factory.cpp  infiltration.cpp  sharpshooter.cpp
Simulator/Rotations/: CMakeLists.txt  Condition.cpp  Condition.h  Filler.h  PriorityList.cpp  PriorityList.h  PriorityListRotation.cpp  PriorityListRotation.h  Rotation2WS.cpp  StaticRotation.cpp  StaticRotation.h
Simulator/Rotations/test/: conditions.cpp  dirty_fighting.cpp  priority_list.cpp  priority_list_rotation.cpp  slightly_complex_rotation.cpp  static_rotation.cpp
Simulator/Simulator/: CMakeLists.txt  main.cpp
Simulator/SimulatorBase/: Ability.cpp  Ability.h  AbilityBuff.cpp  AbilityBuff.h  AbilityDebuff.cpp  ActiveStackingBuff.cpp  ActiveStackingBuff.h  Buff.cpp  Buff.h  Class.cpp  Class.h  ConditionalApplyDebuff.h  DOT.cpp  Debuff.h  Energy.cpp  Rotation.cpp  Rotation.h  StatBuff.h  Target.cpp  Target.h  abilities.cpp  constants.h  parseHelpers.cpp  parseHelpers.h  types.cpp  types.h  utility.h
Simulator/SimulatorBase/detail/: Cache.h  calculations.cpp  names.cpp  names.h  units.h
Simulator/SimulatorBase/test/: comlicated.cpp  cooldowns.cpp  test01.cpp
Simulator/libSimulator/: Ability.cpp  Ability.h  AbilityBuff.cpp  AbilityBuff.h  AbilityDebuff.cpp  AbilityDebuff.h  Buff.cpp  Buff.h  CMakeLists.txt  Class.h  ConditionalApplyDebuff.h  DOT.cpp  DOT.h  Debuff.h  Energy.cpp  Energy.h  Manager.cpp  Manager.h  OnHitAction.h  Player.cpp  Player.h  Rotation.cpp  Rotation.h  StatBuff.cpp  StatBuff.h  Target.cpp  Target.h  TimedStatusEffect.h  abilities.cpp  abilities.h  constants.h  factory.cpp  factory.h  options.cpp  options.h  run.cpp  run.h  types.cpp  types.h  utility.h
Simulator/libSimulator/detail/: Cache.h  calculations.cpp  calculations.h  helpers.cpp  helpers.h  log.cpp  log.h  names.cpp  units.h
Simulator/libSimulator/test/: comlicated.cpp  energy.cpp  gear.json  helpers.cpp  helpers.h  loading.cpp  options.json  options_negative_delay.json  options_non_varying.json  options_varying.json  rotation.json  rotation_snapshot.json  rotation_ws3.json  rotation_ws3_snapshot.json  test.json  test01.cpp
tools/: requirements.txt
tools/cmake/: Coveralls.cmake  CoverallsGenerateGcov.cmake  add_exe.cmake  add_static_library.cmake  add_test.cmake  run_conan.cmake
